--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Application
+.env
+
 # Cache and logs (Symfony2)
 /app/cache/*
 /app/logs/*
@@ -14,6 +17,9 @@
 !var/cache/.gitkeep
 !var/logs/.gitkeep
 !var/sessions/.gitkeep
+
+# Database data
+var/data
 
 # Parameters
 /app/config/parameters.yml
