Install template Admin Theme
Installed Admin Theme based on the AdminLTE Template for easy integration into symfony.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -41,3 +41,7 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    Avanzu\AdminThemeBundle\Command\:
+        resource: '../vendor/avanzu/admin-theme-bundle/Command'
+        tags: ['console.command']
