--- a/composer.json
+++ b/composer.json
@@ -18,10 +18,11 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "avanzu/admin-theme-bundle": "dev-master",
         "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
+        "kevinpapst/adminlte-bundle": "^2.0",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "^4.2.7",
@@ -29,9 +30,12 @@
         "symfony/flex": "^1.2",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "^4.2.7",
+        "symfony/maker-bundle": "^1.11",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/profiler-pack": "^1.0",
+        "symfony/security-bundle": "4.2.*",
+        "symfony/security-core": "4.2.*",
         "symfony/security-csrf": "4.2.*",
         "symfony/swiftmailer-bundle": "^3.2.5",
         "symfony/translation": "4.2.*",
@@ -41,6 +45,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "fzaninotto/faker": "^1.8",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/var-dumper": "4.2.*"
     },
@@ -61,8 +66,7 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd",
-            "avanzu:admin:fetch-vendor": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
@@ -76,7 +80,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": "true",
             "require": "4.2.*"
         }
     }
