--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "doctrine/orm": "^2.5",
         "incenteev/composer-parameter-handler": "^2.0",
         "kevinpapst/adminlte-bundle": "^2.0",
+        "knplabs/knp-menu-bundle": "^2.2",
         "sensio/framework-extra-bundle": "^5.0.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "^4.2.7",
@@ -30,7 +31,6 @@
         "symfony/flex": "^1.2",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "^4.2.7",
-        "symfony/maker-bundle": "^1.11",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/profiler-pack": "^1.0",
@@ -45,6 +45,7 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.11",
         "fzaninotto/faker": "^1.8",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/var-dumper": "4.2.*"
