--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,9 @@
         "twig/twig": "^1.0||^2.0"
     },
     "require-dev": {
-        "symfony/maker-bundle": "^1.11",
         "fzaninotto/faker": "^1.8",
+        "sensiolabs/security-checker": "^5.0",
+        "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/var-dumper": "4.2.*"
     },
@@ -67,7 +68,8 @@
     "scripts": {
         "auto-scripts": {
             "cache:clear": "symfony-cmd",
-            "assets:install %PUBLIC_DIR%": "symfony-cmd"
+            "assets:install %PUBLIC_DIR%": "symfony-cmd",
+            "security-checker security:check": "script"
         },
         "post-install-cmd": [
             "@auto-scripts"
