--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "symfony/security-bundle": "4.2.*",
         "symfony/security-core": "4.2.*",
         "symfony/security-csrf": "4.2.*",
+        "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2.5",
         "symfony/translation": "4.2.*",
         "symfony/twig-bundle": "4.2.*",
