Enable server:run for dev
Enabled server:run for dev, this works better than having the web server defined in docker. Now docker only contains external services and to run symfony you need to combine both, `docker-compose up -d && php bin/console server:run`.

--- a/composer.json
+++ b/composer.json
@@ -50,9 +50,11 @@
         "fzaninotto/faker": "^1.8",
         "sensiolabs/security-checker": "^5.0",
         "symfony/debug-pack": "^1.0",
+        "symfony/dotenv": "4.2.*",
         "symfony/maker-bundle": "^1.11",
         "symfony/phpunit-bridge": "^4.0",
-        "symfony/var-dumper": "4.2.*"
+        "symfony/var-dumper": "4.2.*",
+        "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
         "preferred-install": {
