--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,7 @@ var/data
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
+
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
