--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
 # Application
 .env
 
-# Cache and logs (Symfony2)
-/app/cache/*
-/app/logs/*
-!app/cache/.gitkeep
-!app/logs/.gitkeep
-
-# Email spool folder
-/app/spool/*
-
 # Cache, session files and logs (Symfony3)
 /var/cache/*
 /var/logs/*
@@ -21,21 +12,11 @@
 # Database data
 var/data
 
-# Parameters
-/app/config/parameters.yml
-/app/config/parameters.ini
-
 # Managed by Composer
-/app/bootstrap.php.cache
 /var/bootstrap.php.cache
 /bin/*
 !bin/console
 !bin/symfony_requirements
-/vendor/
-
-# Assets and user uploads
-/web/bundles/
-/web/uploads/
 
 # PHPUnit
 /app/phpunit.xml
@@ -49,9 +30,6 @@ var/data
 
 # Backup entities generated with doctrine:generate:entities command
 **/Entity/*~
-
-# Embedded web-server pid file
-/.web-server-pid
 
 ###> symfony/phpunit-bridge ###
 .phpunit
@@ -70,3 +48,7 @@ var/data
 ###> symfony/web-server-bundle ###
 /.web-server-pid
 ###< symfony/web-server-bundle ###
+
+###> javascript webpack ###
+/public/build
+###< javascript webpack ###
