Enable prod and dev in local
Make able to run dev and prod environment in local to allow test with fake data.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -4,9 +4,9 @@ services:
     db:
         image: mysql:5.7
         ports:
-            - 3306:3306
+            - ${MYSQL_PORT}:3306
         volumes:
-            - "./var/data/db:/var/lib/mysql"
+            - "./var/data_dev/db:/var/lib/mysql"
         environment:
             MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
             MYSQL_DATABASE: ${MYSQL_DATABASE}
