--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "select2": "^4.0.7-rc.0",
     "sweetalert2": "^8.10.6",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
