Install transpile babel-loader for webpack
-  yarn add babel-loader @babel/core @babel/preset-env webpack --dev
- Add babel.config.js
- Add module babel-loader to webpack configuration

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "babel-loader": "^8.0.5",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
