--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
+    "css-loader": "^2.1.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
     "select2": "^4.0.7-rc.0",
+    "style-loader": "^0.23.1",
     "sweetalert2": "^8.10.6",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
