Install plugin underscore
yarn add underscore --dev

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "select2": "^4.0.7-rc.0",
     "style-loader": "^0.23.1",
     "sweetalert2": "^8.10.6",
+    "underscore": "^1.9.1",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   }
