--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
+    "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
     "jquery": "^3.4.1",
@@ -33,6 +34,8 @@
     "sweetalert2": "^8.10.6",
     "underscore": "^1.9.1",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-chunk-hash": "^0.6.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-manifest-plugin": "^2.0.4"
   }
 }
