Finish stock CRUD view

--- a/config/menu/menu.yaml
+++ b/config/menu/menu.yaml
@@ -19,4 +19,8 @@ menu:
         label: 'Stock Market'
         icon: 'fas fa-business-time'
         route: 'stock_market_index'
+      StockMarketMenuItem:
+        label: 'Stock'
+        icon: 'fas fa-money-bill'
+        route: 'stock_index'
 
