--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "symfony/flex": "^1.2",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "^4.2.7",
+        "symfony/messenger": "4.2.*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
         "symfony/profiler-pack": "^1.0",
