Add broker section.
- Created Entity and Repository.
- Create Api/Controller and Controller.
- Created Form type.
- Create migration.
- Created js and scss files.
- Added into the webpack configuration
- Created view.
- Added fixtures.

--- a/config/menu/menu.yaml
+++ b/config/menu/menu.yaml
@@ -17,9 +17,13 @@ menu:
     items:
       MarketStockMarketMenuItem:
         label: 'Stock Market'
-        icon: 'fas fa-business-time'
+        icon: 'fas fa-industry'
         route: 'stock_market_index'
       StockMenuItem:
         label: 'Stock'
         icon: 'fas fa-money-bill'
         route: 'stock_index'
+      BrokerMenuItem:
+        label: 'Broker'
+        icon: 'fas fa-business-time'
+        route: 'broker_index'
