--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.4.4",
     "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
+    "bootstrap-slider": "^10.6.1",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "eonasdan-bootstrap-datetimepicker": "^4.17.47",
