Add wallet section.
Created minimal requirement to have a blank section

- Add in menu.
- Created Entity and Repository.
- Create Controller.
- Created Form type.
- Create migration.
- Created view (empty).

--- a/config/menu/menu.yaml
+++ b/config/menu/menu.yaml
@@ -27,3 +27,7 @@ menu:
         label: 'Broker'
         icon: 'fas fa-business-time'
         route: 'broker_index'
+      WalletMenuItem:
+        label: 'Wallet'
+        icon: 'fas fa-wallet'
+        route: 'wallet_index'
