Add Operation fixture.
- Added Operation fixture.
- Added PersistOperationListener to create trade when operation is a buy or sell or dividend.
- Fixed wallet add and subtract funds functions.
- Update wallet values.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -50,3 +50,7 @@ services:
     App\EventListener\PersistWalletListener:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
+
+    App\EventListener\PersistOperationListener:
+        tags:
+            - { name: doctrine.event_listener, event: prePersist }
