--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "incenteev/composer-parameter-handler": "^2.0",
         "kevinpapst/adminlte-bundle": "^2.0",
         "knplabs/knp-menu-bundle": "^2.2",
+        "league/csv": "^9.0",
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.2.*",
