--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
+        "fabpot/goutte": "^3.2",
         "friendsofsymfony/jsrouting-bundle": "^2.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "kevinpapst/adminlte-bundle": "^2.0",
