--- a/config/services.yaml
+++ b/config/services.yaml
@@ -42,7 +42,7 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
 
-
+    # Doctrine event
     App\EventListener\PersistTransferListener:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
@@ -55,5 +55,5 @@ services:
         tags:
             - { name: doctrine.event_listener, event: prePersist }
 
-
+    # Classes
     Goutte\Client: ~
