--- a/config/services.yaml
+++ b/config/services.yaml
@@ -57,7 +57,7 @@ services:
 
     App\EventListener\FlushStockListener:
         tags:
-            - { name: doctrine.event_listener, event: onFlush }
+            - { name: doctrine.event_listener, event: preFlush }
 
     # Classes
     Goutte\Client: ~
