Add currency DBAL type.

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -19,6 +19,7 @@ doctrine:
 
         types:
             money: App\DBAL\MoneyType
+            currency: App\DBAL\CurrencyType
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
