--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/flex": "^1.2",
         "symfony/form": "4.2.*",
         "symfony/framework-bundle": "^4.2.7",
+        "symfony/http-client": "4.3.*",
         "symfony/messenger": "4.2.*",
         "symfony/monolog-bundle": "^3.1.0",
         "symfony/polyfill-apcu": "^1.0",
@@ -94,7 +95,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "4.2.*"
+            "require": "4.3.*"
         }
     }
 }
