--- a/composer.json
+++ b/composer.json
@@ -31,9 +31,9 @@
         "sensio/framework-extra-bundle": "^5.0.0",
         "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/asset": "4.2.*",
-        "symfony/console": "^4.2.7",
+        "symfony/console": "4.3.*",
         "symfony/flex": "^1.2",
-        "symfony/form": "4.2.*",
+        "symfony/form": "4.3.*",
         "symfony/framework-bundle": "^4.2.7",
         "symfony/http-client": "4.3.*",
         "symfony/messenger": "4.2.*",
