--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -2,3 +2,6 @@ twig:
     default_path: '%kernel.project_dir%/templates'
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
+
+#    form_theme:
+#        - 'Components/Theme/default.html.twig'
