--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -20,7 +20,7 @@ doctrine:
         types:
             money: App\DBAL\MoneyType
             currency: App\DBAL\CurrencyType
-            array_diviend_year: App\DBAL\ArrayDividendYearType
+            wallet_metadata: App\DBAL\WalletMetadataType
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
