--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -21,6 +21,7 @@ doctrine:
             money: App\DBAL\MoneyType
             currency: App\DBAL\CurrencyType
             wallet_metadata: App\DBAL\WalletMetadataType
+            position_metadata: App\DBAL\PositionMetadataType
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
