Add stock notes.
- Added notes field to the stock entity.
- Created database migration file.
- Created Form type.
- Extracted swal form template from panel table template.
- Created Form and RowButton js.
- Installed froala-editor-bundle php package.

--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,7 @@
 app:
   resource: '../src/AppBundle/Controller/'
   type: annotation
+
+kms_froala_editor:
+  resource: "@KMSFroalaEditorBundle/Resources/config/routing.yml"
+  prefix:   /froalaeditor
