--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "friendsofsymfony/jsrouting-bundle": "^2.3",
         "incenteev/composer-parameter-handler": "^2.0",
         "kevinpapst/adminlte-bundle": "^2.0",
+        "kms/froala-editor-bundle": "v2.9.4",
         "knplabs/knp-menu-bundle": "^2.2",
         "league/csv": "^9.0",
         "sensio/framework-extra-bundle": "^5.0.0",
@@ -46,7 +47,7 @@
         "symfony/serializer-pack": "^1.0",
         "symfony/swiftmailer-bundle": "^3.2.5",
         "symfony/translation": "4.2.*",
-        "symfony/twig-bundle": "4.2.*",
+        "symfony/twig-bundle": "4.2.*||4.3.*",
         "symfony/validator": "4.2.*",
         "symfony/yaml": "^4.2.7",
         "twig/twig": "^1.0||^2.0"
