--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,5 +3,5 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
-#    form_theme:
-#        - 'Components/Theme/default.html.twig'
+    form_themes:
+        - '@KMSFroalaEditor/Form/froala_widget.html.twig'
