Create Document editor using CKEditor 5.
- Installed @ckeditor/ckeditor5-build-decoupled-document and @ckeditor/ckeditor5-build-classic.
- Uninstalled kms/froala-editor-bundle php package and its files dependencies.

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,5 +3,5 @@ twig:
     debug: '%kernel.debug%'
     strict_variables: '%kernel.debug%'
 
-    form_themes:
-        - '@KMSFroalaEditor/Form/froala_widget.html.twig'
+#    form_themes:
+#        - '@FOSCKEditor/Form/ckeditor_widget.html.twig'
