--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,6 +5,7 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: en
+    upload_note_dir: '%kernel.project_dir%/public/upload/notes/files'
 
 services:
     # default configuration for services in *this* file
