Fix update stock dividend.
Fixed update stock dividend by adding a new StockDividendService that will depends on a client which returns a list of the dividends of a stock. StockDividendService parsers the list and adds 4 months in advance to this list before return it.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -58,3 +58,13 @@ services:
 
     # Classes
     Goutte\Client: ~
+
+    # Interfaces
+    App\Client\DividendsClientInterface: '@dividends.client'
+
+    # Client
+    Symfony\Contracts\HttpClient\HttpClientInterface:
+        factory: ['Symfony\Component\HttpClient\HttpClient', 'create']
+
+    dividends.client:
+        class: App\Client\NasdaqDividendsClient
