--- a/config/services.yaml
+++ b/config/services.yaml
@@ -18,7 +18,7 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\:
         resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,AppBundle}'
+        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php,AppBundle,Infrastructure}'
 
     # makes classes in src/AppBundle available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
@@ -39,6 +39,7 @@ services:
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
         resource: '../src/Controller'
+        exclude: '../src/Controller/{AccountController}'
         tags: ['controller.service_arguments']
 
     # add more service definitions when explicit configuration is needed
@@ -69,3 +70,49 @@ services:
 
     dividends.client:
         class: App\Client\NasdaqDividendsClient
+
+
+    ##### PRESENTATION LAYER START
+
+    # makes classes in src/Presentation available to be used as services
+    # this creates a service per class whose id is the fully-qualified class name
+    App\Presentation\:
+        resource: '../src/Presentation/*'
+
+    # controllers are imported separately to make sure they're public
+    # and have a tag that allows actions to type-hint services
+    App\Presentation\Controller\:
+        resource: '../src/Presentation/Controller'
+        public: true
+        tags: ['controller.service_arguments']
+
+    ##### PRESENTATION LAYER END
+
+
+    ##### APPLICATION LAYER START
+
+    # Interfaces
+    App\Application\Account\Storage\Finder: '@storage.account.finder'
+
+    ##### APPLICATION LAYER END
+
+
+    ##### INFRASTRUCTURE LAYER START
+
+    # makes classes in src/Infrastructure available to be used as services
+    # this creates a service per class whose id is the fully-qualified class name
+    App\Infrastructure\:
+        resource: '../src/Infrastructure/*'
+        # you can exclude directories or files
+        # but if a service is unused, it's removed anyway
+        exclude: '../src/Infrastructure/{Aggregator}'
+
+    # Aggregator
+    # Repository
+    App\Infrastructure\Aggregator\ChangedRepository: ~
+
+    # Storage
+    storage.account.finder:
+        class: App\Infrastructure\Storage\Account\Finder
+
+    ##### INFRASTRUCTURE LAYER END
