--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -29,6 +29,7 @@
     <testsuites>
         <testsuite name="Project Test Suite">
             <directory>tests</directory>
+            <exclude>tests/Presentation/HTTPClientPhpStorm</exclude>
         </testsuite>
     </testsuites>
 
