--- a/config/services.yaml
+++ b/config/services.yaml
@@ -78,6 +78,9 @@ services:
     # this creates a service per class whose id is the fully-qualified class name
     App\Presentation\:
         resource: '../src/Presentation/*'
+        # you can exclude directories or files
+        # but if a service is unused, it's removed anyway
+        exclude: '../src/Presentation/{Controller,Console}'
 
     # controllers are imported separately to make sure they're public
     # and have a tag that allows actions to type-hint services
@@ -86,16 +89,21 @@ services:
         public: true
         tags: ['controller.service_arguments']
 
+    # commands are imported separately to make sure they're public
+    # and have a tag that allows actions to type-hint services
+    App\Presentation\Console\:
+        resource: '../src/Presentation/Console'
+        public: true
+        tags: ['console.command']
+
     ##### PRESENTATION LAYER END
 
 
     ##### APPLICATION LAYER START
 
-    # Interfaces
-    App\Application\Account\Storage\Finder: '@storage.account.finder'
-
     ##### APPLICATION LAYER END
 
+    App\Application\Account\Repository\AccountRepositoryInterface: '@App\Infrastructure\Storage\AccountRepository'
 
     ##### INFRASTRUCTURE LAYER START
 
@@ -105,14 +113,24 @@ services:
         resource: '../src/Infrastructure/*'
         # you can exclude directories or files
         # but if a service is unused, it's removed anyway
-        exclude: '../src/Infrastructure/{Aggregator}'
+        exclude: '../src/Infrastructure/{Aggregator,Money}'
 
     # Aggregator
-    # Repository
-    App\Infrastructure\Aggregator\ChangedRepository: ~
+    App\Infrastructure\Aggregator\AggregateRepositoryInterface: '@App\Infrastructure\Aggregator\AggregateRepository'
+    App\Infrastructure\Aggregator\AggregateRepository: ~
+
+    app.doctrine.entity_listener:
+        class: App\Infrastructure\Aggregator\AggregateRootListener
+        arguments: ['@event_dispatcher']
+        public: true
+
+    app.doctrine.entity_listener_resolver:
+        class: App\Infrastructure\Doctrine\EntityListenerResolver
+        arguments: [ '@service_container' ]
+        calls:
+            - [addMapping, ['App\Infrastructure\Aggregator\AggregateRootListener', 'app.doctrine.entity_listener']]
 
     # Storage
-    storage.account.finder:
-        class: App\Infrastructure\Storage\Account\Finder
+    App\Infrastructure\Storage\AccountRepository: ~
 
     ##### INFRASTRUCTURE LAYER END
