Add stock index endpoint.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -114,6 +114,7 @@ services:
 
     App\Application\Market\Repository\ProjectionStockInfoRepositoryInterface: '@App\Infrastructure\Storage\Market\ProjectionStockInfoRepository'
     App\Application\Market\Repository\ProjectionStockMarketRepositoryInterface: '@App\Infrastructure\Storage\Market\ProjectionStockMarketRepository'
+    App\Application\Market\Repository\ProjectionStockRepositoryInterface: '@App\Infrastructure\Storage\Market\ProjectionStockRepository'
     App\Application\Market\Repository\StockInfoRepositoryInterface: '@App\Infrastructure\Storage\Market\StockInfoRepository'
     App\Application\Market\Repository\StockMarketRepositoryInterface: '@App\Infrastructure\Storage\Market\StockMarketRepository'
     App\Application\Market\Repository\StockRepositoryInterface: '@App\Infrastructure\Storage\Market\StockRepository'
@@ -156,6 +157,7 @@ services:
 
     App\Infrastructure\Storage\Market\ProjectionStockInfoRepository: ~
     App\Infrastructure\Storage\Market\ProjectionStockMarketRepository: ~
+    App\Infrastructure\Storage\Market\ProjectionStockRepository: ~
     App\Infrastructure\Storage\Market\StockInfoRepository: ~
     App\Infrastructure\Storage\Market\StockMarketRepository: ~
     App\Infrastructure\Storage\Market\StockRepository: ~
