Add StockScraperInterface and YahooStockScraper implementation.

--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "ext-json": "*",
+        "ext-dom": "*",
         "doctrine/doctrine-bundle": "^1.6",
         "doctrine/doctrine-migrations-bundle": "^2.0",
         "doctrine/orm": "^2.5",
